Fix test issues